trunk/Archive2/d4/d51c0c611a0d0d/output
main.cpp: In function 'int main()':
main.cpp:4:5: error: 'A::A()' is private
     A() = default;
     ^
main.cpp:19:9: error: within this context
     A a{};
         ^
